fix bar z-index

--- a/css/eulerface_layout_s.css
+++ b/css/eulerface_layout_s.css
@@ -7,6 +7,7 @@ body {
 	float: right;
 	width: 2.61rem;
 	height: 2.61rem;
+	z-index: 999;
 }
 
 #logo {
